stylesheet.css
* {
    box-sizing: border-box;
}

#container {
    margin: 30px auto;
    max-width: 300px;
    height: 400px;
    border: 8px solid black;
    display: flex;
    flex-direction: column;
}

#display {
    height: 50px;
    background-color: lightgray;
    text-align: end;
    font-size: 40px;
    padding: 5px;
}

#buttonArea {
    display: flex;
    flex-direction: column;
    border: 1px solid black;
    flex: 1;
}

.btnRow {
    flex: 1;
    display: flex;
    justify-content: stretch;
}

.btn {
    flex: 1;
}

#btn0 {
    flex-grow: 2.3;
}

